Test/errors/err_field_init_unknown.cb
struct Point { int x = 0; int y = 0; };

extern int main()
{
    expect_error("'Point' has no field named 'z'");
    Point p = { z=1 };
    return 0;
}
